--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "blog_node_api",
+  "name": "blog_app_node",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -22,10 +22,9 @@
     "mongodb": "^4.2.2",
     "mongoose": "^6.1.4",
     "multer": "^1.4.4",
-    "nodemailer": "^6.7.2",
-    "nodemon": "^2.0.11"
+    "nodemailer": "^6.7.2"
   },
   "devDependencies": {
-    "nodemon": "^1.18.4"
+    "nodemon": "^2.0.16"
   }
 }
