--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
     "connect-mongodb-session": "^3.1.1",
+    "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "express-session": "^1.17.2",
@@ -21,10 +22,11 @@
     "jsonwebtoken": "^8.5.1",
     "mongodb": "^4.2.2",
     "mongoose": "^6.1.4",
-    "multer": "^1.4.4",
-    "nodemailer": "^6.7.2"
+    "multer": "^1.4.5-lts.1",
+    "nodemailer": "^6.7.2",
+    "socket.io": "^4.5.1"
   },
   "devDependencies": {
-    "nodemon": "^2.0.16"
+    "nodemon": "^1.3.3"
   }
 }
