--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "connect-mongodb-session": "^3.1.1",
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
+    "eslint": "^8.13.0",
     "express": "^4.17.1",
     "express-session": "^1.17.2",
     "express-validator": "^6.14.0",
@@ -24,7 +25,8 @@
     "mongoose": "^6.1.4",
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.7.2",
-    "socket.io": "^4.5.1"
+    "socket.io": "^4.5.1",
+    "winston": "^3.6.0"
   },
   "devDependencies": {
     "nodemon": "^1.3.3"
