--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,29 @@
-node_modules
-config/*.env
-logs
+# Coverage directory
+coverage
+*.lcov
+
+# Dependency directories
+node_modules/
+jspm_packages/
+
+# Assets file
 images/*
+
+# Optional npm cache directory
+.npm
+
+# Optional eslint cache
+.eslintcache
+
+# dotenv environment variable files
+config/.env
+config/.env.production
+config/.env.test
+
+# Stores VSCode versions used for testing VSCode extensions
+.vscode-test
+.vscode
+
+# Remove logs
+./logs
+*.log
