--- a/package.json
+++ b/package.json
@@ -6,17 +6,21 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon index.js",
-    "start-server": "node index.js"
+    "start-server": "node index.js",
+    "lint-fix": "eslint ./*/*.js --fix"
   },
   "author": "Partha Saha",
   "license": "ISC",
   "dependencies": {
+    "@babel/eslint-parser": "^7.18.2",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
     "connect-mongodb-session": "^3.1.1",
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
-    "eslint": "^8.13.0",
+    "eslint": "^8.1.0",
+    "eslint-config-google": "^0.14.0",
+    "eslint-plugin-eslint-plugin": "^4.4.0",
     "express": "^4.17.1",
     "express-session": "^1.17.2",
     "express-validator": "^6.14.0",
