--- a/package.json
+++ b/package.json
@@ -4,9 +4,10 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "mocha",
     "start": "nodemon index.js",
     "start-server": "node index.js",
+    
     "lint-fix": "./node_modules/.bin/eslint ./**.js ./**/**.js --fix"
   },
   "author": "Partha Saha",
@@ -15,6 +16,7 @@
     "@babel/eslint-parser": "^7.18.2",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
+    "chai": "^4.3.6",
     "connect-mongodb-session": "^3.1.1",
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
@@ -25,6 +27,7 @@
     "express-validator": "^6.14.0",
     "helmet": "^5.1.0",
     "jsonwebtoken": "^8.5.1",
+    "mocha": "^10.0.0",
     "mongodb": "^4.2.2",
     "mongoose": "^6.1.4",
     "multer": "^1.4.5-lts.1",
