--- a/package.json
+++ b/package.json
@@ -7,7 +7,6 @@
     "test": "mocha",
     "start": "nodemon index.js",
     "start-server": "node index.js",
-    
     "lint-fix": "./node_modules/.bin/eslint ./**.js ./**/**.js --fix"
   },
   "author": "Partha Saha",
@@ -32,6 +31,7 @@
     "mongoose": "^6.1.4",
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.7.2",
+    "sinon": "^14.0.0",
     "socket.io": "^4.5.1",
     "winston": "^3.6.0"
   },
