--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "mocha",
+    "test": "mocha --timeout 10000",
     "start": "nodemon index.js",
     "start-server": "node index.js",
     "lint-fix": "./node_modules/.bin/eslint ./**.js ./**/**.js --fix"
